ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_02.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--bibiana--virgin-and-martyr\", \"st--bibiana\"]"
expression: s.0
---
2024-12-02
Vespers of St. Bibiana, Virgin and Martyr:
Vespers:
  Antiphons:   Ordinary of Advent (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Virgins
  Hymn:        Common of Virgins
  Verse:       Common of Virgins
  Magnificat:  Common of Virgins
  Collect:     Proper
  Commemoration of Feria II week I of Advent:
    Magnificat Antiphon: Proper
    Verse: Ordinary of Advent (or Psalter)
    Collect: Proper
