ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_03.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--francis-xavier--confessor\", \"st--francis-xavier\"]"
expression: s.0
---
2024-12-03
Vespers of St. Francis Xavier, Confessor:
Vespers:
  Antiphons:   Ordinary of Advent (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessors (Non-Bishop)
  Hymn:        Common of Confessors (Non-Bishop)
  Verse:       Common of Confessors (Non-Bishop)
  Magnificat:  Common of Confessors (Non-Bishop)
  Collect:     Proper
  Commemoration of Feria III week I of Advent:
    Magnificat Antiphon: Proper
    Verse: Ordinary of Advent (or Psalter)
    Collect: Proper
