ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_04.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--peter-chrysologus--bishop-and-confessor-and-doctor-of-the-church\", \"st--peter-chrysologus\"]"
expression: s.0
---
2024-12-04
Vespers of St. Peter Chrysologus, Bishop and Confessor and Doctor of the Church:
Vespers:
  Antiphons:   Ordinary of Advent (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
  Commemoration of Feria IV week I of Advent:
    Magnificat Antiphon: Proper
    Verse: Ordinary of Advent (or Psalter)
    Collect: Proper
