ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_06.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--nicholas--bishop-and-confessor\", \"st--nicholas\"]"
expression: s.0
---
2024-12-06
Vespers of St. Nicholas, Bishop and Confessor:
Vespers:
  Antiphons:   Ordinary of Advent (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
  Commemoration of Feria VI week I of Advent:
    Magnificat Antiphon: Proper
    Verse: Ordinary of Advent (or Psalter)
    Collect: Proper
