ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_08.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"the-immaculate-conception-of-the-blessed-virgin-mary\"]"
expression: s.0
---
2024-12-08
Second Vespers of The Immaculate Conception of the Blessed Virgin Mary:
Vespers:
  Antiphons:   Proper
  Psalms:      Common of the Blessed Virgin Mary
  Chapter:     Proper
  Hymn:        Common of the Blessed Virgin Mary
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
  Commemoration of Dominica II of Advent:
    Magnificat Antiphon: Proper
    Verse: Ordinary of Advent (or Psalter)
    Collect: Proper
